fix settings and sign up

--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Others/sign-up.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Others/sign-up.html
@@ -1,111 +1,251 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head th:replace="fragments/layout.html :: html_head"/>
 <body>
 <div th:replace="fragments/layout.html :: menu"/>
 <head>
-
-    </script>
 </head>
 <body>
 
-<h2> Sign Up </h2>
-
-<form action="#" th:action="@{/register}"
-      th:object="${newMember}" method="post">
-    <table>
-        <tbody>
-        <tr>
-            <td><span th:text="#{fieldLabel.email}"></span></td>
-            <td><input type="email" th:field="*{email}" size="40" th:placeholder="${currentEmail}"/></td>
-        </tr>
-        <tr>
-            <td><span th:text="#{fieldLabel.password}"></span></td>
-            <td><input type="text" th:field="*{password}" size="40" /></td>
-            <!-- <td th:if="${#fields.hasErrors('password')}"
-              th:errors="*{password}"></td> -->
-        </tr>
-        <tr>
-            <td><span th:text="#{fieldLabel.username}"></span></td>
-            <td><input type="text" th:value="*{username}" th:field="*{username}"  th:placeholder="${currentUsername}"/></td>
-            <!-- <td th:if="${#fields.hasErrors('username')}"
-              th:errors="*{username}"></td> -->
-        </tr>
-        <tr>
-            <td><span th:text="#{fieldLabel.gender}"></span></td>
-            <td>
-                <select th:field="*{gender}">
-                    <option value="MALE">MALE</option>
-                    <option value="FEMALE">FEMALE</option>
-                    <option value="OTHER">OTHER</option>
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td><span th:text="#{fieldLabel.birthday}"></span></td>
-            <td><input type="date" th:value="*{birthday}" th:field="*{birthday}"  /></td>
-            <!-- <td th:if="${#fields.hasErrors('birthday')}"
-              th:errors="*{birthday}"></td> -->
-
-        </tr>
+<div class="m-2">
+    <div class="row d-flex h-100">
+        <table>
+            <tr>
+                <td width="5%">
 
 
-        <tr>
-            <td><span th:text="#{fieldLabel.currentCity}"></span></td>
-            <td><input type="text" th:value="*{currentCity}" th:field="*{currentCity}"  /></td>
-        </tr>
+                </td>
+                <td width="40%">
+                    <form id="regForm" action="#" th:action="@{/members/register}"
+                          th:object="${newMember}" method="post">
 
-        <tr>
-            <td><span th:text="#{fieldLabel.courseTaken}"></span></td>
-            <td><input type="text" th:value="*{courseTaken}" th:field="*{courseTaken}"  /></td>
-        </tr>
+                        <h1 style="color:#ad2eb3;">Sign Up</h1>
+                        <!-- One "tab" for each step in the form: -->
+                        <div class="tab"><b>Email</b>
+                            <p><input name="email" type="email" th:field="*{email}" th:placeholder="${currentEmail}" class="signup-input"></p>
+                            <b>Password</b> (8 or more characters)
+                            <p><input name="password" type="password" th:field="*{password}" class="signup-input" required></p>
+                            <b>Username</b>
+                            <p><input name="username" type="text" th:placeholder="${currentUsername}" th:field="*{username}" class="signup-input"></p>
+                            <b>Year of Birth</b>
+                            <p><input name="birthday" type="date" th:field="*{birthday}" class="signup-input" required></p>
+                            <p><b>Current Role</b></p>
+                            <p><input name="currentJobTitle" input type="text" th:field="*{currentJobTitle}" class="signup-input" required></p>
+                        </div>
+                        <div class="tab">
+                            <p><b>Gender</b></p>
+                            <select class="select" th:field="*{gender}" required>
+                                <option value="" disabled selected hidden>Choose one...</option>
+                                <option value='MALE' th:text="MALE"></option>
+                                <option value='FEMALE'th:text="FEMALE"></option>
+                                <!-- <option value='option-3'>Prefer Not To Say</option> -->
+                            </select>
+                            <p><b>Education Level</b></p>
+                            <select class="select" th:field="*{education}" required>
+                                <option value="" disabled selected hidden>Choose one..</option>
+                                <option value='DOCTORAL' th:text="DOCTORAL"></option>
+                                <option value='MASTER' th:text="MASTER"></option>
+                                <option value='BACHELOR' th:text="BACHELOR"></option>
+                                <option value='DIPLOMA'th:text="DIPLOMA"></option>
+                                <option value='OTHERS'th:text="OTHERS"></option>
+                            </select>
+                            <p><b>Dream Job</b></p>
+                            <select class="select"  th:field="*{dreamJob}" required>
+                                <option th:each="job : ${jobList}" th:value="${job.getJobId()}" th:text="${job.getJobTitle()}"></option>
+                            </select>
 
-        <tr>
-            <td><span th:text="#{fieldLabel.dreamJob}"></span></td>
-            <td><input type="text" th:field="*{dreamJob}" size="20" /></td>
-        </tr>
+                            <div></div>
+                            <p><b>Your Skills</b></p>
+                            <select style="margin-bottom:30px;" name="skills" class="selectm" multiple>
+                               </fieldset>
+                                    <option th:each="skill : ${skillList}" th:value="${skill.getSkillId()}" th:text="${skill.getSkillTitle()}"></option>
+                                </fieldset>
+                            </select>
+                            <br>
+                            <br>
+                        </div>
+                        <div class="tab">
+                            <p><b>About Yourself</b></p>
+                            <p><textarea class="textarea2" th:field="*{shortBio}" rows="3" placeholder="max character 30 words" required></textarea></p>
+                        </div>
+                        <div style="overflow:auto;">
+                            <button type="button" class="btn btn-secondary" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
+                            <button type="button" class="btn btn-secondary" id="nextBtn" onclick="nextPrev(1)">Next</button>
+                        </div>
+                        <!-- Circles which indicates the steps of the form: -->
+                        <div style="text-align:center;margin-top:30px;">
+                            <span class="step"></span>
+                            <span class="step"></span>
+                            <span class="step"></span>
+                        </div>
+                    </form>
+                    <div id="message"></div>
 
-        <!-- <td>
-          <fieldset>
-            <select th:field="*{dreamJob}">
-              <option value=""></option>
-              <option th:each="dreamJob : ${dreamJobs}" th:value="${manager}" th:text="${manager}">List
-              </option>
-            </select>
-          </fieldset>
-        </td> -->
+                </td>
+                <td width="50%">
+                    <div>
 
-        <tr>
-            <td><span th:text="#{fieldLabel.currentJobTitle}"></span></td>
-            <td><input type="text" th:field="*{currentJobTitle}" size="20" /></td>
-        </tr>
-        <tr>
-            <td><span th:text="#{fieldLabel.education}"></span></td>
-            <td><input type="text" th:field="*{education}" size="20" /></td>
-            <!-- <td th:if="${#fields.hasErrors('education')}"
-            th:errors="*{education}"></td> -->
-
-        </tr>
-        <tr>
-            <td><span th:text="#{fieldLabel.shortBio}"></span></td>
-            <td colspan="3"><textarea th:field="*{shortBio}"
-                                      th:rows="${shortBio}" cols="40"></textarea></td>
-        </tr>
+                        <img src="/images/signupimage.png"
+                             class="img-fluid" width="800" height="600">
+                    </div>
+                </td>
+                <td width="5%">
 
 
-        <tr>
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Sign Up" class="blcass" />
-                <input type="reset" value="Reset" class="blcass" />
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</form>
+                </td>
+            </tr>
+        </table>
+
+    </div>
+</body>
+
+<script>
+    const message = document.getElementById("message");
+    message.style.display="none";
+    var currentTab = 0; // Current tab is set to be the first tab (0)
+    showTab(currentTab); // Display the current tab
+
+    function showTab(n) {
+        // This function will display the specified tab of the form...
+        var x = document.getElementsByClassName("tab");
+        x[n].style.display = "block";
+        //... and fix the Previous/Next buttons:
+        if (n == 0) {
+            document.getElementById("prevBtn").style.display = "none";
+        } else {
+            document.getElementById("prevBtn").style.display = "inline";
+        }
+        if (n == (x.length - 1)) {
+            document.getElementById("nextBtn").innerHTML = "Sign Up";
+        } else {
+            document.getElementById("nextBtn").innerHTML = "Next";
+        }
+        //... and run a function that will display the correct step indicator:
+        //fixStepIndicator👎
+    }
+
+    function nextPrev(n) {
+
+        while(message.hasChildNodes()) {
+            message.removeChild(message.firstChild)
+        }
+        // This function will figure out which tab to display
+        var x = document.getElementsByClassName("tab");
+        // Exit the function if any field in the current tab is invalid:
+        if (n == 1 && !validateForm()) return false;
+        if (n == 2 && !validateSecondForm()) return false;
+        if (n == 3 && !validateThirdForm()) return false;
+         // Hide the current tab:
+        x[currentTab].style.display = "none";
+        // Increase or decrease the current tab by 1:
+        currentTab = currentTab + n;
+        // if you have reached the end of the form...
+        if (currentTab >= x.length) {
+            // ... the form gets submitted:
+            document.getElementById("regForm").submit();
+            return false;
+        }
+        // Otherwise, display the correct tab:
+        showTab(currentTab);
+    }
+
+    function validateForm() {
+        // This function deals with validation of the form fields
+        var x, y, i, valid = true;
+        x = document.getElementsByClassName("tab");
+        y = x[currentTab].getElementsByTagName("input");
+        // A loop that checks every input field in the current tab:
+        for (i = 0; i < y.length; i++) {
+            // If a field is empty...
+            if (!y[i].disabled) {
+                if (y[i].value == "") {
+                    // add an "invalid" class to the field:
+                    y[i].className += "invalid";
+                    // and set the current valid status to false
+                    valid = false;
+                    const node = document.createElement("li");
+                    const textNode = document.createTextNode(y[i].id + "cannot be blank");
+                    node.appendChild(textNode);
+                    message.appendChild(node);
+                    message.style.display="";
+                }
+            }
+
+        }
+
+        if (!validateEmail()) {
+            valid = false;
+            const node = document.createElement("li");
+            const textNode = document.createTextNode("Input correct email");
+            node.appendChild(textNode);
+            message.appendChild(node);
+            message.style.display="";
+        }
+        if(!validatePassword()) {
+            valid = false;
+            valid = false;
+            const node = document.createElement("li");
+            const textNode = document.createTextNode("Input correct password");
+            node.appendChild(textNode);
+            message.appendChild(node);
+            message.style.display="";
+        }
+        // If the valid status is true, mark the step as finished and valid:
+        if (valid) {
+            document.getElementsByClassName("step")[currentTab].className += " finish";
+        }
+        return valid; // return the valid status
+    }
+
+    function validateSecondForm() {
+        let valid = true;
+        return valid;
+    }
+
+    function validateThirdForm() {
+
+        let valid = true;
+        return valid;
+
+    }
+
+    function validateEmail() {
+
+        const emailAdd = document.getElementById("email");
+
+        if (emailAdd.disabled) {
+            return true;
+        }
+        if (/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test(emailAdd.value))
+        {
+            return true
+        }
+        return false
+    }
+
+    function validatePassword() {
+        let pass = document.getElementById("password").value;
+        pass = pass.split(" ").join("");
+        if (pass.length < 8) {
+            return false;
+        }
+        return true;
+    }
+
+
+    function fixStepIndicator(n) {
+        // This function removes the "active" class of all steps...
+        var i, x = document.getElementsByClassName("step");
+        for (i = 0; i < x.length; i++) {
+            x[i].className = x[i].className.replace(" active", "");
+        }
+        //... and adds the "active" class on the current step:
+        x[n].className += " active";
+    }
+</script>
 
 <script th:inline="javascript">
+
     /*<![CDATA[*/
 
     let currentUsername = [[${currentUsername}]];
@@ -114,6 +254,7 @@
     console.log(currentEmail)
 
     /*]]>*/
+
 
     const username = document.getElementById("username");
     const email = document.getElementById("email");
@@ -124,9 +265,6 @@
     }
 </script>
 
-
-
-</body>
 <footer>
     <div th:replace="fragments/layout.html :: footer" />
 </footer>
