--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature2-SearchCourse/course-result.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature2-SearchCourse/course-result.html
@@ -46,7 +46,7 @@
 
             <td width="60%" style="text-align: right">
                 <div sec:authorize="isAuthenticated()">
-                    <a th:href="@{/myCourses}" class="btn btn-secondary">View My Courses</a>
+                    <a th:href="@{/myCourses/manageProgress}" class="btn btn-secondary">View My Courses</a>
                 </div>
             </td>
 
