"Update Course-Result and Skill Result design"

--- a/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature1-SearchSkills/skill-result.html
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/templates/Feature1-SearchSkills/skill-result.html
@@ -36,6 +36,8 @@
 
     <div>
         <table class='table table-borderless' style="background-color:#f7f5f5">
+<!-- Joey added this -->
+            <p><center><i>Click on the above skills to find out more</i></b></center> </p>
 
             <tbody id="skillTitleId"> </tbody>
 
